--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+medical_qa_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
