--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-"venv/" 
-"__pycache__/" 
-"*.pyc" 
-".ipynb_checkpoints/" 
-".DS_Store" 
+venv/ 
+__pycache__/ 
+*.pyc
+.ipynb_checkpoints/
+.DS_Store
 medical_qa_model/model.safetensors
 
